...
            android:layout_marginStart="92dp"
            android:layout_marginTop="120dp"
            android:text="@string/submitted"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.311"
            app:layout_constraintStart_toEndOf="@+id/submitTaskButton"
            app:layout_constraintTop_toBottomOf="@+id/statusSpinner" />

    <Button
            android:id="@+id/submitTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
